--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
+    <TextView
         android:id="@+id/imageview_theme"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintWidth_percent="1"
-        app:layout_constraintHeight_percent="1"
+        android:text="Skincam"
+        android:fontFamily="@font/fontstyle"
+        android:textSize="100sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/image_bottom_bar_guideline"/>
+        app:layout_constraintBottom_toTopOf="@id/image_bottom_bar_guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.5"/>
 
     <Button
         android:id="@+id/btn_camera"
@@ -70,6 +76,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation = "horizontal"
-        app:layout_constraintGuide_percent="0.5"/>
+        app:layout_constraintGuide_percent="0.6"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
