--- a/app/src/main/res/drawable-v24/roundbutton.xml
+++ b/app/src/main/res/drawable-v24/roundbutton.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color= "@color/white" />
-    <stroke android:color="@color/black"
+    <solid android:color= "@color/colorPrimaryDark" />
+    <stroke android:color="@color/colorPrimaryDark"
             android:width = "4dp"/>
     <corners android:bottomRightRadius="33dp"
         android:bottomLeftRadius="33dp"
